--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <h3>Products</h3>
             </a>
             <a href="#">
-                <span class="material-icons-sharp">report_gmailerrored</span>
+                <span class="material-icons-sharp"> gmail</span>
                 <h3>Reports</h3>
             </a>
             <a href="#">
