--- a/index.html
+++ b/index.html
@@ -76,6 +76,17 @@
                 <h1>$2.000.000</h1>
               </div>
 
+              <div class="progress">
+                <svg>
+                  <circle cx='38' cy='38' r='36'></circle>
+                </svg>
+              </div>
+              
+              <div class="number">
+                <p>81%</p>
+              </div>
+            </div>
+          </div>
 
           <!--==================FIN DE VENTAS========================-->
 
