--- a/index.html
+++ b/index.html
@@ -186,6 +186,42 @@
           <a href="#">Mostrar Mas</a>
         </div>
       </main>
+
+      <!--Fin del main-->
+      <div class="right">
+        <div class="top">
+          <button id="menu-btn">
+            <span class="material-icons-sharp">menu</span>
+          </button>
+          <div class="theme-toggler">
+            <span class="material-icons-sharp">light_mode</span>
+            <span class="material-icons-sharp">dark_mode</span>
+          </div>
+          <div class="profile">
+            <div class="info">
+              <p>Hey, <b>Andres</b></p>
+              <small class="text-muted">Admin</small>
+            </div>
+            <div class="profile-photo">
+              <img src="jpeg" alt="">
+            </div>
+          </div>
+        </div>   
+      </div>
+      <!--Fin  del Top-->
+      <div class="recent-updates">
+        <h2>Recent Updates</h2>
+        <div class="updates">
+          <div class="updates">
+            <div class="profile-photo">
+              <img src="" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+
     </div>
   </body>
 </html>
