--- a/ahorros.html
+++ b/ahorros.html
@@ -66,7 +66,7 @@
       
         <!--====================FIN DE INSIGTHS=============================-->
         <div class="recent-orders">
-            <a class="a-button" href="#">
+            <a class="a-button" href="/AgregarDatos/ahorrosDatos.html">
                 <button class="b-new">Nuevo</button>
             </a>
 
@@ -130,7 +130,7 @@
              <!--Fin  del Top-->
             <div class="recent-updates">
               <h2 class="f2">Motivo de Ahorro</h2>
-              <a class="a-button" href="#">
+              <a class="a-button" href="/AgregarDatos/motivoDeAhorro.html">
                 <button class="b-new">Nuevo</button>
                 </a><br>
               <div class="updates">
