--- a/transporte.html
+++ b/transporte.html
@@ -66,7 +66,7 @@
       
         <!--====================FIN DE INSIGTHS=============================-->
         <div class="recent-orders">
-            <a class="a-button" href="#">
+            <a class="a-button" href="/AgregarDatos/transporteDatos.html">
                 <button class="b-new">Nuevo</button>
                 </a>
 
