--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
             <span class="material-icons-sharp">no_crash</span>
             <h3>Transporte</h3>
           </a>
+
+          <a href="#">
+            <span class="material-icons-sharp">add</span>
+            <h3>Otro</h3>
+          </a>
          
           <a href="#">
             <span class="material-icons-sharp">logout</span>
