--- a/index.html
+++ b/index.html
@@ -66,9 +66,7 @@
       <!--===================FIN BARRA DE MENU=====================-->
       <main>
         <h1>Pagina Principal</h1>
-
-  
-
+      
         <div class="insights">
           <div class="sales">
             <span class="material-icons-sharp">analytics</span>
@@ -192,6 +190,13 @@
       <!--Fin del main-->
       <div class="right">
         <div class="top">
+          <button id="menu-btn">
+            <span class="material-icons-sharp">menu</span>
+          </button>
+          <div class="theme-toggler">
+            <span class="material-icons-sharp active">light_mode</span>
+            <span class="material-icons-sharp ">dark_mode</span>
+          </div>
           <div class="profile">
             <div class="info">
               <p>Hey, <b>Andres</b></p>
@@ -232,7 +237,7 @@
       </div>
        
 
-
+      <script src="/index.js"></script>
 
     </div>
   </body>
